# DRF

./: .env.sample  Dockerfile  README.MD  course_fixture_data.json  docker-compose.yaml  pyproject.toml  pytest.ini  schema.yml  test_payment.json  test_user.json
course/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_alter_lesson_course_alter_lesson_video_url.py  0002_course_owner_lesson_link_lesson_owner.py  0002_course_owner_lesson_owner_subscription_user.py  0002_initial.py  0003_merge_20240613_1821.py  0003_subscription.py  0004_alter_lesson_options_alter_lesson_course.py  0004_alter_subscription_options_and_more.py  0005_remove_lesson_link_remove_subscription_owner_and_more.py  0006_alter_lesson_options_alter_course_owner_and_more.py  0006_alter_subscription_user.py  0007_rename_course_lesson_course_course_and_more.py  0008_remove_lesson_course_course_and_more.py  0009_rename_course_lesson_course_les_and_more.py  0010_alter_lesson_options_remove_lesson_course_les_and_more.py  0011_alter_subscription_course.py  0012_alter_lesson_course.py
course/tests/: test_payments.py
drf/: celery.py  settings.py  urls.py
users/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: cc_fil_pay.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_payment_course_payment_is_paid_payment_lesson_and_more.py  0002_payment_course_payment_lesson_payment_user.py  0003_alter_payment_link.py  0003_alter_user_options_payment.py  0003_payment_link.py  0004_alter_user_options_remove_user_username_user_role_and_more.py  0004_payment_is_paid_payment_session_id.py  0004_remove_payment_session_payment_session_id.py  0005_remove_payment_course_remove_payment_lesson.py
